# DeGamma

./: .gitignore  CMakeLists.txt  WHAT-TO-DO-TO-ADD-MODEL.txt  main.cpp
app/: CMakeLists.txt
app/include/models/: AirboatModel.cpp  AirboatModel.hpp
assets/: horf.stl  lantern.stl
assets/Crate/: ._Crate1.blend
assets/Key/: ._Textures.rar  ._Worn_Key.mtl  Textures.rar  Worn_Key.mtl
assets/Mountain/: Mountain.mtl
assets/Wheelchair/: Wheelchair.mtl
assets/apart/: ._3d-model.mtl  3d-model.mtl
assets/arbre/: ._fir_tree.mtl  fir_tree.mtl
assets/arbre2/: ._assets.mtl
assets/arbre3/: ._3d-model.mtl  3d-model.mtl
assets/brouette/: ._wheelbarrow bl internal.mtl  wheelbarrow bl internal.mtl
assets/cave/: boite.mtl
assets/chambre/: ._3d-model.mtl  3d-model.mtl
assets/cintre/: ._3d-model-2.mtl  3d-model-2.mtl
assets/floorGrass/: floorGrass.mtl
assets/hospital_Bed/: Bed.mtl
assets/porte/: ._3d-model.mtl  3d-model.mtl
assets/scenes/: 1.json  2.json  3.json  dragons.json  model.json
assets/skybox/: top.tga
assets/tulip/: ._tulips.u3d
assets/wallChambre/: fullChambre.mtl  fullChambre2.mtl  wallChambre.mtl
engine/include/: renderable.hpp
engine/src/: renderable.cpp
glimac/: CMakeLists.txt
glimac/include/: Chronometrable.hpp  Countdown.hpp  Engine.hpp  FileLogger.hpp  FreeflyCamera.hpp  Light.hpp  Mesh.hpp  Model.hpp  ModelManager.hpp  Program.hpp  Renderable.hpp  RenderableFactory.hpp  ResourceManager.hpp  SDLWindowManager.hpp  Scene.hpp  Shader.hpp  Skybox.hpp  Texture.hpp  TimeDefinitions.hpp  TimeManager.hpp  Timer.hpp  TrackballCamera.hpp  Transform.hpp  Vertex.hpp  common.hpp  glm.hpp  models.hpp  renderable.hpp
glimac/include/app/include/: parameters.hpp
glimac/include/app/include/models/: AirboatModel.cpp  AirboatModel.hpp  CaveModel.hpp  ChevetModel.hpp  CottageModel.hpp  CrateModel.hpp  DragonModel.hpp  FloorGrassModel.hpp  HorfModel.hpp  HospitalBedModel.hpp  LanternModel.hpp  MountainModel.hpp  TulipModel.hpp  WallChambreModel.hpp  WheelchairModel.hpp  (+1 more)
glimac/include/glimac/: TrackballCamera.hpp
glimac/include/models/: models.cpp  models.hpp
glimac/src/: Chronometrable.cpp  Cone.cpp  Countdown.cpp  Engine.cpp  FreeflyCamera.cpp  Light.cpp  Mesh.cpp  Model.cpp  ModelManager.cpp  Program.cpp  Renderable.cpp  RenderableFactory.cpp  ResourceManager.cpp  SDLWindowManager.cpp  Scene.cpp  Skybox.cpp  Sphere.cpp  Texture.cpp  TimeManager.cpp  Timer.cpp  TrackballCamera.cpp  Vertex.cpp  renderable.cpp
shaders/: 3D.fs.glsl  3D.vs.glsl  cellshading.fs.glsl  modelLoading.fs.glsl  modelLoading.vs.glsl  normalWave.fs.glsl  skybox.vs.glsl
(+17 files in other folders)
